# ufrn_DCA3505

./: .gitignore  Makefile  README.md
a_asm/: Makefile  _start  _start.s
b_stack/: alter  alter.c  alter_1.c  alter_2  alter_2.c  alter_3  alter_3.c
c_fork/: Makefile
c_fork/c00_syntax/: fork_syntax  fork_syntax.c
c_fork/c01_sequence/: fork_sequence  fork_sequence.c
c_fork/c02_wait_sequence/: fork_wait_sequence  fork_wait_sequence.c
c_fork/c03_variables/: fork_variables.c
c_fork/c04_execve/: fork_execve.c
c_fork/c05_dup/: fork_dup.c
e_pthread/: Makefile  README.md  peterson.c  peterson2.c  thread  thread.c  thread_counting_mutex.c
e_pthread/e01_data_race/: Makefile  e01_data_race.c  e01_data_race_silent.c
e_pthread/e02_atomic/: atomic  e02_atomic.c
e_pthread/e03_peterson/: data_race
e_pthread/e90_atomic/: e90_atomic.c
e_pthread/e91_futex/: e91_futex.c
e_pthread/e92_mutex_from_futex/: e92_mufutex.c  e92_mufutex_waf.c  mufu  mufus
e_pthread/e93_futex_economic/: data_race_silent  e93_economic_futex.c  efu
e_pthread/e94_produce_consume/: a_pc.c  b_pc.c  c  c_pc.c  d  d_pc.c  e_pc.c
f_ipc/f99_semaphore/: semaphore copy.c  semaphore.c
g_memory/g00_kernel/: .gitignore  Makefile  TODO.md  helper.c  m00_run.c  m01_paging.c  m02_test.c  m03_map.c  m04_read_effect.c  m05_write_effect.c  m06_remove_map.c  m07_invalidate_tlb.c  m08_readonly.c  m09_exception_handler.c  m10_custom_handler.c  m10_desafio.c  m11_fault_details.c  m12_two_level.c  m13_update_child.c  m14_two_tables.c  main.c  x.x
g_memory/g00_kernel/objdump/: d00_run.s  d01_paging.s  d02_test.s  d03_map.s  d04_read_effect.s  d05_write_effect.s  d06_remove_map.s  d07_invalidate_tlb.s  d08_readonly.s  d09_exception_handler.s  (+6 more)
g_memory/g01_pagination/: entry.s
g_memory/g03_mapping/: helper.h  linker.ld  main.c
h_filesystem/h03_mount/: f  h  lf  main.c  main_fuse.c  main_hover.c  main_lay.c  main_lay_fuse.c  pb.c
h_filesystem/h99_sb/: README.md  m  main.c  size_test
y_references/: README.md
z_atividade/: README.md
z_atividade/projeto/gois/: .clang-format  .gitignore  CMakeLists.txt  EXECUTIVE_SUMMARY.md  LICENSE  README.md  README_2.md  TODO.md  d.sh  do.sh  do_build.sh  graphxx.c  lockdep_core copy.c  log.x  nmm.sh  pthread_interpose_order.c.backup  report.txt  run_tests.sh  strace.report  strace_test.report  strace_working.report  t  t.c  x  xgraph.c
z_atividade/projeto/gois/report/: Makefile  main.tex
z_atividade/projeto/gois/report/a_capa/: a01_capa.tex  a02_resumo.tex  a03_abstract.tex  a04_toc.tex
z_atividade/projeto/gois/report/b_introducao/: b01_contexto.tex  b02_objetivos.tex  b03_abordagem.tex
z_atividade/projeto/gois/report/c_fundamentacao/: c01_deadlocks.tex  c02_lockdep_linux.tex  c03_interposicao.tex
z_atividade/projeto/gois/report/d_implementacao/: d01_visao_geral.tex  d02_estruturas.tex  d03_ptrace.tex  d04_graph_library.tex
z_atividade/projeto/gois/report/e_resultados/: e01_testes.tex  e02_analise.tex  e03_limitacoes.tex  e04_ptrace_resultados.tex
z_atividade/projeto/gois/report/f_referencias/: f01_referencias.tex
z_atividade/projeto/gois/report/j_apendices/: j01_appendix.tex
z_atividade/projeto/gois/report/x_referencias/: x00_references.tex
z_atividade/projeto/gois/scripts/: run_ptrace_test.sh.in
z_atividade/projeto/gois/src/: main.c
z_atividade/projeto/gois/src/gptrace/: gplt.c
z_atividade/projeto/gois/src/interpose/: pthread_interpose.c
z_atividade/projeto/gois/src/lockdep/: lockdep_core.c
z_atividade/projeto/gois/src/ptrace/: Makefile  README.md  backtrace.c  backtrace.h  ld_ptrace.c  lock_tracker.c  lock_tracker.h  main.c  pthread_structures.c  pthread_structures.h  ptrace-lockdep  ptrace_attach.c  ptrace_attach.h  syscall_intercept.c  syscall_intercept.h  test_program  test_program.c
z_atividade/projeto/gois/src/tests/: t02_classic_deadlock.c  t04_circular_deadlock.c  t05_dining_philosophers.c  t06_dynamic_locks.c  t08_deadlock_avoidance_trylock.c
z_atividade/projeto/gois/toy/a00_interposition/: Makefile  interpose.c  main  main.c
z_atividade/projeto/gois/toy/a01_displays/: Makefile  graph.c  graph.h  interpose.c  interpose.h  interpose_graph.c  lockdep.h  main  main.c  visualizer.c
z_atividade/projeto/lockdep/: .clang-format  .gitignore  CMakeLists.txt  DEFINITION.md  README.md
z_atividade/projeto/lockdep/src/include/: lockdep.h
z_atividade/projeto/lockdep/src/lockdep/: lockdep_core.c  lockdep_core_sh.c
z_atividade/projeto/lockdep/tests/: t01_simple_self_lock.c  t03_nested_deadlock.c  t09_deadlock_avoidance_timeout.c  t_nolock.c
z_atividade/tarefa1/: Makefile  README.md  minimal  minimal.da  minimal.s  minimal_fixed  minimal_fixed.da  minimal_fixed.s  relatorio.aux  relatorio.out  relatorio.tex
z_atividade/tarefa2/: Makefile  README.md  relatorio.aux  relatorio.out  relatorio.tex  write_asm  write_asm.s  write_c  write_c.c  x.x
z_atividade/tarefa3/: Makefile  README.md  fork_pid.c  report.tex  report_simple.tex
z_atividade/tarefa4/: Makefile  README.md  main  main.c  report.aux  report.out  report.tex
z_atividade/tarefa5/: Makefile  README.md  clum  clumsy.c  main  main.c  main.dump  main_atomic  main_atomic.c  main_atomic.dump  main_mutex.c  main_mutex.dump  main_o  main_o.dump  mmx  report.aux  report.tex
z_atividade/tarefa6/: Makefile  README.md  analysis.py  blocking.sh  report.tex  report_pt.aux  report_pt.out  report_pt.tex  report_pt.toc  spawn  spawn.c  todo  todo done
z_atividade/tarefa6_overseer/: Makefile  a.c  spawn  spawn.c
z_atividade/tarefa7/: Makefile  README.md  clumsy  clumsy.c  main  main.c  main_atomic  main_atomic.c  main_atomicLanguage  main_atomicLanguage.c  main_barrier  main_barrier.c  main_noopt  main_pragma  main_pragma.c  main_sync  main_sync.c  paths  report copy.tex  report.aux  report.tex
z_atividade/tarefa8/: README.md  main_futex.c
z_atividade/tarefa9/: Makefile  README.md  code_annotations.aux  code_annotations.out  code_annotations.tex  cpu_comparison.aux  cpu_comparison.out  cpu_comparison.tex  debate.aux  debate.out  debate.tex  report.aux  report.out  report.tex
(+74 files in other folders)
